Fix align  issue with h3 and call to action button

--- a/styles.css
+++ b/styles.css
@@ -58,6 +58,7 @@ h3 {
   font-weight: 700;
   color: #1f2937;
   font-family: Roboto, sans-serif;
+  text-align: center;
 }
 
 h5 {
@@ -214,7 +215,7 @@ h5 {
   justify-content: flex-end;
   align-self: flex-end;
   display: flex;
-  padding-left: 15%;
+  
 }
 
 .button {
